--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #989898;
+    color: #000000;
     padding: 1em 0;
     text-align: center;
 }
